LBP 652 - spacing before return and padding fix

--- a/public/ti3.css
+++ b/public/ti3.css
@@ -260,7 +260,7 @@ h3 {
 
 p {
     margin-top: 10px;
-    padding: 0px 16px;
+    padding: 0px 0px;
 }
 
 code {
